@@ -1,5 +1,9 @@
 2012-03-05  Valek Filippov
 
+		* QPW: minimal support.
+
+2012-03-05  Valek Filippov
+
 		* CDR: 'fild' type 9 for ver 13+.
 
 2012-03-05  Valek Filippov
